--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -12,12 +12,13 @@
 
     </section>
     <section class="portraits">
-        <div class="portraits__divFavourite js-printBrowser">
+        <div class="portraits__divFavourite ">
             <h2 class="portraits__divFavourite--title">Favourites</h2>
-            
+            <ul class="js-favs-list"></ul>
         </div>
         <div class="portraits__divBrowser js-pasteBrowsers">
             <h2 class="portraits__divBrowser--title">Search results</h2>
+            <ul class="portraits__divBrowser--ul js-browsers-list"></ul>
         </div>
     </section>
 </main>
