try change color

--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -14,7 +14,7 @@
     <section class="portraits">
         <div class="portraits__divFavourite ">
             <h2 class="portraits__divFavourite--title">Favourites</h2>
-            <ul class="js-favs-list"></ul>
+            <ul class="portraits__divFavourite--ul js-favs-list"></ul>
         </div>
         <div class="portraits__divBrowser js-pasteBrowsers">
             <h2 class="portraits__divBrowser--title">Search results</h2>
