--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -82,6 +82,8 @@
         }
         &--ul li {
             background-color: $color-yellow;
+            align-items: center;
+            border-color: $color-yellow;
         }
     
     }
